<resources>
    <string name="app_name">Helping Hand</string>
    <string name="title_activity_login">Login</string>
    <string name="user_token_key">token</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="link_register">Ainda não possui cadastro?</string>

    <string name="name_label">Nome</string>
    <string name="email_label">Email</string>
    <string name="password_label">Senha</string>
    <string name="confirm_password_label">Confirme sua senha</string>

    <string name="login_button_label">Logar</string>
    <string name="register_button_label">Cadastrar</string>
    <string name="back_button_label">Voltar</string>
    <string name="dictionary_menu_label">Dicionário</string>
    <string name="home_menu_label">Home</string>
    <string name="feed_menu_label">Feed</string>
    <string name="person_menu_label">Perfil</string>

    <string name="like_label">Curtir</string>
    <string name="comment_label">Comentários</string>
    <string name="post_label">Postagem</string>
    <string name="post_body_hint">Que experiência quer compartilhar hoje?</string>
</resources>